--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body {
   height: 14vh;
 
   border-radius: 1vw;
+
+  font-size: 5vh;
+  text-align: center;
+  line-height: 13vh;
+  font-weight: bold;
 }
 
 .info {
@@ -42,7 +47,7 @@ body {
   border-radius: 1vw;
   width: 7vw;
   height: 4vh;
-  font-size: 1rem;
+  font-size: 2vh;
   font-weight: bold;
   cursor: pointer;
 }
@@ -57,11 +62,30 @@ body {
   border-radius: 1vw;
   text-align: center;
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 2.3vh;
   width: 10vw;
   height: 10vh;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+#game-over,
+#game-win {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(238, 228, 218, 0.73);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 6px;
+  z-index: 100;
+
+  line-height: 60vh;
+  font-size: 7vh;
 }
